2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added a PropertyChangedCallback to ShowGridLines.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added handling for out of range Row/Column values.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed type in previous change.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added validation for Column, ColumnSpan, Row, RowSpan.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: ColumnDefinitionCollection.cs, Grid.cs,  RowDefinitionCollection.cs: Experimental fix.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Incomplete and buggy ShowGridLines implementation.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, Grid.cs, RowDefinition.cs: Implemented Row/ColumnDefinition.Offset (hopefully).

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Another row/column span handling fix.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added measurement invalidation in response to changes in attached properties.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed row/column span handling.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed star sizing.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added handling for some layout cases.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: More work.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: More work.
	* ColumnDefinition.cs, DefinitionBase.cs, RowDefinition.cs: Added.
	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Reset ActualWidth/ActualHeight when the contents change.

2007-06-20  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Initial implementation. It is missing some features and has some bugs but some trivial cases work.